fixing slides width on mobile

--- a/assets/css/user.css
+++ b/assets/css/user.css
@@ -91,8 +91,9 @@ div .social-icons a:hover {
 }
 
 .slides {
-  width: 720px;
+  /* width: 720px;
   height: 480px;
+  */
 }
 
 .modBoxedSlider {
